# autocode

./: .gitignore  CHANGELOG.md  README.md  code.code-workspace  code_editor.py  dev.py  example.py  main.py  pyproject.toml  run.py  test_run.py
.github/: dependabot.yml
.github/workflows/: publish.yml  release.yml  test.yml
src/autocode/: __init__.py  __main__.py  agent_dev.py  agent_manager.py  cli.py  code_editor.py  code_editor_utils.py  directory_utils.py  dual_agent.py  export.py  git.py  github_issue_server.py  main.py  render.py  terminal.py
tests/: lorem.txt  package-lock.test.json  test_auto_linting.py  test_code_editor.py  test_directory_utils.py  test_edit_file.py  test_export.py  test_hello_world.py  test_main.py  test_search_files.py  test_simple_math.py  test_terminal.py
