[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autocode"
version = "0.1.0"
description = "A library for auto-generating and managing code"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "autochat[all]",
    "pillow",
    "playwright",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.4",
]

[project.scripts]
autocode = "autocode.cli:main"
