[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autocode"
version = "0.1.0"
description = "A library for auto-generating and managing code"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "autochat[all]==0.18.2",
    "pillow",
    "playwright",
    "pygithub>=2.6.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.4",
]

[project.scripts]
autocode = "autocode.cli:main"
autocode-export = "autocode.export:main"
autocode-dual = "autocode.dual_agent:main"
autocode-github-issue-server = "autocode.github_issue_server:main"

[tool.semantic_release]
version_source = "commit"
version_toml = [
    "pyproject.toml:project.version",
]
branch = "master"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install build && python -m build"
changelog_file = "CHANGELOG.md"
dist_path = "dist/"
commit_message = "chore(release): bump version to {version}"